templates/tautulli_template.yaml
---
# Source: tautulli/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-svc
  labels:
    helm.sh/chart: tautulli-0.4
    app-name: tautulli
    component: "media-monitoring-server"
    managed-by: chynten
    created-by: chynten
    version: "v2.7.5"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8181
      targetPort: 8181
  selector:
    app-name: tautulli
---
# Source: tautulli/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli-deployment
  labels:
    helm.sh/chart: tautulli-0.4
    app-name: tautulli
    component: "media-monitoring-server"
    managed-by: chynten
    created-by: chynten
    version: "v2.7.5"
spec:
  replicas: 1
  revisionHistoryLimit: 
  selector:
    matchLabels:
      app-name: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app-name: tautulli
    spec:
      restartPolicy: Always
      containers:
        - name: tautulli
          image: "tautulli/tautulli:v2.7.5"
          imagePullPolicy: IfNotPresent
          resources:
            {}
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: tautulli
      securityContext:
        {}
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-pvc
---
# Source: tautulli/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  labels:
    helm.sh/chart: tautulli-0.4
    app-name: tautulli
    component: "media-monitoring-server"
    managed-by: chynten
    created-by: chynten
    version: "v2.7.5"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "tautulli.example.com"
      secretName: tautulli-letsencrypt-certificate
  rules:
    - host: "tautulli.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli-svc
                port:
                  number: 8181
